python/testData/quickFixes/PyAddImportQuickFixTest/alwaysSplitFromImports/main.py
from mod import foo

print(foo, <error descr="Unresolved reference 'bar'">b<caret>ar</error>)